--- a/app/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/map_view_button"
-        android:title="Map"
-        android:icon="@drawable/map_temp_vector"/>
+        android:icon="@drawable/map_temp_vector"
+        android:title="Map View"
+        android:titleCondensed="Map"
+        android:iconTint="?attr/colorOnSurface" />
+
     <item
         android:id="@+id/list_view_button"
-        android:title="List View"
-        android:icon="@drawable/list_view"/>
+        android:icon="@drawable/list_view"
+        android:title="Tasks"
+        android:titleCondensed="List"
+        android:iconTint="?attr/colorOnSurface" />
+
 </menu>
