--- a/app/app/src/main/res/menu/task_options_menu.xml
+++ b/app/app/src/main/res/menu/task_options_menu.xml
@@ -1,9 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_update"
-        android:title="Update Task"/>
+        android:title="✏️ Edit Task"
+        android:icon="@drawable/ic_edit"
+        android:iconTint="@color/colorPrimary"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_delete"
-        android:title="Delete Task"/>
+        android:title="🗑️ Remove Task"
+        android:icon="@drawable/ic_delete"
+        android:iconTint="@color/colorError"
+        app:showAsAction="ifRoom" />
 </menu>
