--- a/app/app/src/main/res/layout/popup_menu.xml
+++ b/app/app/src/main/res/layout/popup_menu.xml
@@ -6,14 +6,14 @@
     android:background="@android:color/white"
     android:padding="16dp">
 
-<!--    <Button-->
-<!--        android:id="@+id/update_button"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_weight="1"-->
-<!--        android:text="Update"-->
-<!--        android:backgroundTint="@android:color/holo_blue_light"-->
-<!--        android:textColor="@android:color/white"/>-->
+    <Button
+        android:id="@+id/update_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Update"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:textColor="@android:color/white"/>
 
     <Button
         android:id="@+id/delete_button"
