--- a/frontend/app/src/main/res/xml/network_security_config.xml
+++ b/frontend/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,8 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">13.216.143.65</domain>
+        <trust-anchors>
+            <certificates src="@raw/cert" />
+        </trust-anchors>
     </domain-config>
 </network-security-config>
