--- a/frontend/app/src/main/res/xml/network_security_config.xml
+++ b/frontend/app/src/main/res/xml/network_security_config.xml
@@ -1,9 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">13.216.143.65</domain>
+    <base-config cleartextTrafficPermitted="true">
         <trust-anchors>
             <certificates src="@raw/cert" />
         </trust-anchors>
-    </domain-config>
+    </base-config>
 </network-security-config>
